# secure-module

./: CMakeLists.txt  Readme.md
examples/: CMakeLists.txt
examples/root_mode/: CMakeLists.txt  simple.cpp
src/: CMakeLists.txt  secmod.h
src/root/: RootModule.cpp  RootModule.h  RootSession.cpp  RootSession.h
